상태별 분리 적용

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,4 +21,6 @@
 </html>
 
 <script src="/js/node_modules/redux/dist/redux.js"></script>
+<script src="/js/features/counter.js"></script>
+<script src="/js/features/referee.js"></script>
 <script src="/js/index.js"></script>
